--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/main",
   "version": "0.0.0",
   "description": "Hyperclick markdown provider",
+  "repository": "https://github.com/ewnd9/hyperclick-markdown",
   "engines": {
     "atom": ">0.194.0"
   },
